--- a/modules/luci-base/po/zh_Hant/base.po
+++ b/modules/luci-base/po/zh_Hant/base.po
@@ -7431,6 +7431,12 @@ msgstr "覆寫TOS"
 msgid "Override TTL"
 msgstr "覆寫TTL"
 
+msgid "Override IPv4 TTL"
+msgstr "覆寫 IPv4 TTL"
+
+msgid "Override IPv6 Hotlimit"
+msgstr "覆寫 IPv6 Hotlimit"
+
 #: modules/luci-mod-network/htdocs/luci-static/resources/view/network/wireless.js:1250
 msgid ""
 "Override default MAC address - the range of usable addresses might be "
